# zflight

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf  prj_debug.conf
app/boards/: nucleo_f722ze.conf  nucleo_f722ze.overlay
app/dts/bindings/zfight/: esc-manager.yaml
app/include/zflight/: app.h  flight_task.h  led_controller.h  led_manager.h  terminal.h
app/src/: app.c  main.c
app/src/flight/: flight_control.c
app/src/io/: led_controller.c  led_manager.c  led_patterns.c  led_patterns.h
app/src/motors/: esc_manager.c
app/src/states/: flight_state.c  flight_state.h  idle_state.c  idle_state.h  init_state.c  init_state.h  maint_state.c  maint_state.h  state_machine.c  state_machine.h
app/src/terminal/: terminal.c
boards/speedybee/f7v3/: Kconfig.defconfig  Kconfig.speedybee_f7v3  board.cmake  board.yml  speedybee_f7v3.dts  speedybee_f7v3.yaml  speedybee_f7v3_defconfig
boards/speedybee/f7v3/doc/: index.rst
drivers/: CMakeLists.txt  Kconfig
drivers/esc/: CMakeLists.txt  Kconfig
drivers/esc/dshot/: CMakeLists.txt  Kconfig  Kconfig.stm32  dshot_common.c  dshot_common.h  dshot_shell.c  dshot_stm32.c
drivers/rc_link/: CMakeLists.txt  Kconfig  Kconfig.crsf  rc_link_crsf.c  rc_link_shell.c
dts/bindings/esc/: esc-base.yaml
dts/bindings/esc/dshot/: dshot-controller.yaml  st,stm32-dshot.yaml  st,stm32-esc-dshot.yaml
dts/bindings/rc_link/: rc_link,crsf.yaml
include/zflight/drivers/: esc.h  rc_link.h
include/zflight/drivers/esc/: dshot.h
include/zflight/drivers/rc_link/: rc_link_crsf.h
include/zflight/drivers/rc_link/protocols/: crsf_protocol.h
snippets/esc-dshot/: README.rst  esc-dshot.conf  esc-dshot.overlay  snippet.yml
snippets/rx-crsf/: README.rst  rx-crsf.conf  rx-crsf.overlay  snippet.yml
snippets/usb-terminal/: README.rst  snippet.yml  usb-terminal.conf  usb-terminal.overlay
zephyr/: module.yml
zflight/: CMakeLists.txt  Kconfig  prj.conf
zflight/boards/: nucleo_f722ze.overlay  nucleo_f722ze_custom.conf  nucleo_f722ze_custom.overlay
zflight/cmake/: verify_args.cmake
zflight/include/zflight/: control.h  esc_manager.h
zflight/src/: main.c
zflight/src/control/: control_state_machine.c
zflight/src/flight/: flight_control.h  flight_task.c
zflight/src/terminal/: terminal.c
